guacamole page start

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Permanent Marker">
+    <link rel="shortcut icon" href="./assets/icons/sushicon.ico" type="image/x-icon">
     <title>PK Recipes</title>
 </head>
 <body>
@@ -16,9 +17,9 @@
     <main>
         <h2>All recipes:</h2>
         <a class="no-decoration list-anchor" href="./recipes/guacamole.html">
-            <div class="recipe-name"><span class="rec-name-tag">Name: </span><span>Guacamole</span></div>
-            <div class="topic-name"><span class="topic-name-tag">Topic: </span><span>Dips</span></div>
-            <div class="time"><span class="time-tag">Time: </span><span>20 mins</span></div>
+            <div class="recipe-name"><span class="name-tag">Name: </span><span>Guacamole</span></div>
+            <div class="topic-name"><span class="name-tag">Topic: </span><span>Dips</span></div>
+            <div class="time"><span class="name-tag">Time: </span><span>20 mins</span></div>
         </a>
     </main>
 </body>
