--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Permanent Marker">
+    <link rel="shortcut icon" href="../assets/icons/sushicon.ico" type="image/x-icon">
     <title>PK Recipes - Guacamole</title>
 </head>
 <body>
@@ -14,7 +15,14 @@
         </a>
     </header>
     <main>
-        <h2>GUACAMOLE</h2>
+        <h2 class="recipe-hl">Guacamole</h2>
+        <section class="quick-info">
+            <div class="servings"><span class="name-tag">Servings: </span><span>12</span></div>
+            <div class="total-time"><span class="name-tag">Total Time: </span><span>20 mins</span></div>
+        </section>
+        <section class="ingredients">
+            <h2 class="ingredients-hl">Ingredients</h2>
+        </section>
     </main>
 </body>
 </html>
