Guacamole page basic set

--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -16,12 +16,58 @@
     </header>
     <main>
         <h2 class="recipe-hl">Guacamole</h2>
+        <figure class="top-img-container">
+            <img class="guacamole" src="../assets/images/guacamole.webp" alt="Bowl full of guacamole">
+        </figure>
         <section class="quick-info">
             <div class="servings"><span class="name-tag">Servings: </span><span>12</span></div>
             <div class="total-time"><span class="name-tag">Total Time: </span><span>20 mins</span></div>
         </section>
         <section class="ingredients">
             <h2 class="ingredients-hl">Ingredients</h2>
+            <ul class="ingredients-list">
+                <li>2 tablespoons minced fresh serrano chili</li>
+                <li>½ cup chopped fresh cilantro, divided</li>
+                <li>¼ cup finely diced white onion</li>
+                <li>½ teaspoon kosher salt for grinding vegetables, plus more to taste</li>
+                <li>4 large Hass avocados</li>
+                <li>1 cup diced ripe tomatoes, drained (Optional)</li>
+                <li>1 lime, juiced, or more to taste</li>
+            </ul>
+        </section>
+        <section class="steps">
+            <h2 class="steps-hl">Steps</h2>
+            <ol class="steps-list">
+                <li>
+                    Place minced peppers, 1/4 cup of the chopped cilantro, 
+                    and the diced onions on a cutting board. Chop them together 
+                    into very small pieces. Sprinkle with kosher salt. 
+                    Using the flat side of the knife blade, smear the mixture 
+                    to work it into a paste, and chop again to achieve as fine a texture as possible.
+                </li>
+                <li>
+                    Stem, halve, and pit the avocados. 
+                    Scoop out flesh and place in a bowl. 
+                    Add 1/4 cup chopped cilantro, onion and serrano mixture, 
+                    salt, and fresh lime juice. Mash with a potato masher to 
+                    desired texture (smooth or chunky), 5 or 6 minutes. 
+                    Taste and adjust seasonings. If not serving immediately, cover and refrigerate.
+                </li>
+            </ol>
+        </section>
+        <figure class="bot-img-container">
+            <img id="holy-guac" src="../assets/images/holy-guac.webp" alt="Holy guacamole">
+        </figure>
+        <section class="quick-info nutrition-wrapper">
+            <div class="nutrition-col-wrapper">
+                <h2 class="nutrition-hl">Nutrition Facts</h2>
+                <div class="nutrition-row-wrapper">
+                    <div><span class="name-tag">Calories: </span><span>158</span></div>
+                    <div><span class="name-tag">Fat: </span><span>14g</span></div>
+                    <div><span class="name-tag">Carbs: </span><span>10g</span></div>
+                    <div><span class="name-tag">Protein: </span><span>2g</span></div>
+                </div>
+            </div>
         </section>
     </main>
 </body>
