Add some more recipes

--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -18,7 +18,7 @@
     <main>
         <h2 class="recipe-hl">Guacamole</h2>
         <figure class="top-img-container">
-            <img id="guacamole" src="../assets/images/guacamole.webp" alt="Bowl full of guacamole">
+            <img id="guacamole" class="top-img" src="../assets/images/guacamole.webp" alt="Bowl full of guacamole">
         </figure>
         <section class="quick-info">
             <div class="servings"><span class="name-tag">Servings: </span><span>12</span></div>
@@ -61,7 +61,7 @@
             </ol>
         </section>
         <figure class="bot-img-container">
-            <img id="holy-guac" src="../assets/images/holy-guac.webp" alt="Holy guacamole">
+            <img id="holy-guac" class="bot-img" src="../assets/images/holy-guac.webp" alt="Holy guacamole">
         </figure>
         <section class="quick-info nutrition-wrapper">
             <div class="nutrition-col-wrapper">
@@ -75,7 +75,7 @@
             </div>
         </section>
         <section class="source-display">
-            <a href="https://www.allrecipes.com/recipe/255589/chef-johns-classic-guacamole/" target="_blank"><span class="recipe-source">Source</span></a>
+            <a href="https://www.allrecipes.com/recipe/255589/chef-johns-classic-guacamole/" target="_blank" rel="noopener noreferrer"><span class="recipe-source">Source</span></a>
         </section>
     </main>
     <footer>
