--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
             <div class="topic-name"><span class="name-tag">Topic: </span><span>Dips</span></div>
             <div class="time"><span class="name-tag">Time: </span><span>20 mins</span></div>
         </a>
+        <a class="no-decoration list-anchor" href="./recipes/sun_dried_tomato_pasta.html">
+            <div class="recipe-name"><span class="name-tag">Name: </span><span>Sun-Dried Tomato Pasta With Crispy Capers</span></div>
+            <div class="topic-name"><span class="name-tag">Topic: </span><span>Dinner</span></div>
+            <div class="time"><span class="name-tag">Time: </span><span>25 mins</span></div>
+        </a>
+        <a class="no-decoration list-anchor" href="./recipes/chili_wings.html">
+            <div class="recipe-name"><span class="name-tag">Name: </span><span>Oven-baked Chili Ginger Wings</span></div>
+            <div class="topic-name"><span class="name-tag">Topic: </span><span>Dinner</span></div>
+            <div class="time"><span class="name-tag">Time: </span><span>1h 20 mins</span></div>
+        </a>
+        <a class="no-decoration list-anchor" href="./recipes/garlic_linguini.html">
+            <div class="recipe-name"><span class="name-tag">Name: </span><span>Spicy Garlic Butter Linguini</span></div>
+            <div class="topic-name"><span class="name-tag">Topic: </span><span>Dinner</span></div>
+            <div class="time"><span class="name-tag">Time: </span><span>20 mins</span></div>
+        </a>
     </main>
 </body>
 </html>
