--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
             <div class="topic-name"><span class="name-tag">Topic: </span><span>Dinner</span></div>
             <div class="time"><span class="name-tag">Time: </span><span>20 mins</span></div>
         </a>
+        <a class="no-decoration list-anchor" href="./recipes/chicken_congee.html">
+            <div class="recipe-name"><span class="name-tag">Name: </span><span>Chicken Congee</span></div>
+            <div class="topic-name"><span class="name-tag">Topic: </span><span>Dinner</span></div>
+            <div class="time"><span class="name-tag">Time: </span><span>20 mins</span></div>
+        </a>
     </main>
 </body>
 </html>
