--- a/recipes/chicken_congee.html
+++ b/recipes/chicken_congee.html
@@ -22,6 +22,7 @@
         </figure>
         <section class="quick-info">
             <div class="servings"><span class="name-tag">Servings: </span><span>4</span></div>
+            <div class="total-time"><span class="name-tag">Total Time: </span><span>2h 15mins</span></div>
         </section>
         <section class="ingredients">
             <h2 class="ingredients-hl">Ingredients</h2>
