--- a/index.html
+++ b/index.html
@@ -16,30 +16,48 @@
     </header>
     <main>
         <h2>All recipes:</h2>
-        <a class="no-decoration list-anchor" href="./recipes/guacamole.html">
-            <div class="recipe-name"><span class="name-tag">Name: </span><span>Guacamole</span></div>
-            <div class="topic-name"><span class="name-tag">Topic: </span><span>Dips</span></div>
-            <div class="time"><span class="name-tag">Time: </span><span>20 mins</span></div>
-        </a>
+        
         <a class="no-decoration list-anchor" href="./recipes/sun_dried_tomato_pasta.html">
             <div class="recipe-name"><span class="name-tag">Name: </span><span>Sun-Dried Tomato Pasta With Crispy Capers</span></div>
             <div class="topic-name"><span class="name-tag">Topic: </span><span>Dinner</span></div>
             <div class="time"><span class="name-tag">Time: </span><span>25 mins</span></div>
+            <div class="lang"><img src="./assets/images/usa-icon.png" alt="USA icon" class="lang-icon"></div>
         </a>
         <a class="no-decoration list-anchor" href="./recipes/chili_wings.html">
             <div class="recipe-name"><span class="name-tag">Name: </span><span>Oven-baked Chili Ginger Wings</span></div>
             <div class="topic-name"><span class="name-tag">Topic: </span><span>Dinner</span></div>
             <div class="time"><span class="name-tag">Time: </span><span>1h 20 mins</span></div>
+            <div class="lang"><img src="./assets/images/usa-icon.png" alt="USA icon" class="lang-icon"></div>
         </a>
         <a class="no-decoration list-anchor" href="./recipes/garlic_linguini.html">
             <div class="recipe-name"><span class="name-tag">Name: </span><span>Spicy Garlic Butter Linguini</span></div>
             <div class="topic-name"><span class="name-tag">Topic: </span><span>Dinner</span></div>
             <div class="time"><span class="name-tag">Time: </span><span>20 mins</span></div>
+            <div class="lang"><img src="./assets/images/usa-icon.png" alt="USA icon" class="lang-icon"></div>
         </a>
         <a class="no-decoration list-anchor" href="./recipes/chicken_congee.html">
             <div class="recipe-name"><span class="name-tag">Name: </span><span>Chicken Congee</span></div>
             <div class="topic-name"><span class="name-tag">Topic: </span><span>Dinner</span></div>
             <div class="time"><span class="name-tag">Time: </span><span>2h 15 mins</span></div>
+            <div class="lang"><img src="./assets/images/usa-icon.png" alt="USA icon" class="lang-icon"></div>
+        </a>
+        <a class="no-decoration list-anchor" href="./recipes/rice_paper_tteokbokki.html">
+            <div class="recipe-name"><span class="name-tag">Name: </span><span>Rice Paper Tteokbokki (vegan)</span></div>
+            <div class="topic-name"><span class="name-tag">Topic: </span><span>Snack (Street Food)</span></div>
+            <div class="time"><span class="name-tag">Time: </span><span>10 mins</span></div>
+            <div class="lang"><img src="./assets/images/usa-icon.png" alt="USA icon" class="lang-icon"></div>
+        </a>
+        <a class="no-decoration list-anchor" href="./recipes/guacamole.html">
+            <div class="recipe-name"><span class="name-tag">Name: </span><span>Guacamole</span></div>
+            <div class="topic-name"><span class="name-tag">Topic: </span><span>Dips</span></div>
+            <div class="time"><span class="name-tag">Time: </span><span>20 mins</span></div>
+            <div class="lang"><img src="./assets/images/usa-icon.png" alt="USA icon" class="lang-icon"></div>
+        </a>
+        <a class="no-decoration list-anchor" href="./recipes/curry_dattel_dip.html">
+            <div class="recipe-name"><span class="name-tag">Name: </span><span>Curry Dattel Dip</span></div>
+            <div class="topic-name"><span class="name-tag">Topic: </span><span>Dips</span></div>
+            <div class="time"><span class="name-tag">Time: </span><span>5 mins</span></div>
+            <div class="lang"><img src="./assets/images/de-icon.png" alt="DE icon" class="lang-icon"></div>
         </a>
     </main>
 </body>
