--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
             <div class="time"><span class="name-tag">Time: </span><span>10 mins</span></div>
             <div class="lang"><img src="./assets/images/usa-icon.png" alt="USA icon" class="lang-icon"></div>
         </a>
+        <a class="no-decoration list-anchor" href="./recipes/schokoladen_brownie_cookies.html">
+            <div class="recipe-name"><span class="name-tag">Name: </span><span>Schokoladen Brownie Cookies</span></div>
+            <div class="topic-name"><span class="name-tag">Topic: </span><span>Snacks</span></div>
+            <div class="time"><span class="name-tag">Time: </span><span>30 mins</span></div>
+            <div class="lang"><img src="./assets/images/de-icon.png" alt="DE icon" class="lang-icon"></div>
+        </a>
         <a class="no-decoration list-anchor" href="./recipes/guacamole.html">
             <div class="recipe-name"><span class="name-tag">Name: </span><span>Guacamole</span></div>
             <div class="topic-name"><span class="name-tag">Topic: </span><span>Dips</span></div>
