--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </a>
         <a class="no-decoration list-anchor" href="./recipes/rice_paper_tteokbokki.html">
             <div class="recipe-name"><span class="name-tag">Name: </span><span>Rice Paper Tteokbokki (vegan)</span></div>
-            <div class="topic-name"><span class="name-tag">Topic: </span><span>Snack (Street Food)</span></div>
+            <div class="topic-name"><span class="name-tag">Topic: </span><span>Snacks (Street Food)</span></div>
             <div class="time"><span class="name-tag">Time: </span><span>10 mins</span></div>
             <div class="lang"><img src="./assets/images/usa-icon.png" alt="USA icon" class="lang-icon"></div>
         </a>
