--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
             <div class="time"><span class="name-tag">Time: </span><span>2h 15 mins</span></div>
             <div class="lang"><img src="./assets/images/usa-icon.png" alt="USA icon" class="lang-icon"></div>
         </a>
+        <a class="no-decoration list-anchor" href="./recipes/honeycomb_steamed_tofu_with_chili_oil.html">
+            <div class="recipe-name"><span class="name-tag">Name: </span><span>Honeycomb Steamed Tofu With Chili Oil</span></div>
+            <div class="topic-name"><span class="name-tag">Topic: </span><span>Dinner</span></div>
+            <div class="time"><span class="name-tag">Time: </span><span>40 mins</span></div>
+            <div class="lang"><img src="./assets/images/usa-icon.png" alt="USA icon" class="lang-icon"></div>
+        </a>
         <a class="no-decoration list-anchor" href="./recipes/rice_paper_tteokbokki.html">
             <div class="recipe-name"><span class="name-tag">Name: </span><span>Rice Paper Tteokbokki (vegan)</span></div>
             <div class="topic-name"><span class="name-tag">Topic: </span><span>Snacks (Street Food)</span></div>
