--- a/recipes/schokoladen_brownie_cookies.html
+++ b/recipes/schokoladen_brownie_cookies.html
@@ -18,7 +18,7 @@
     <main>
         <h2 class="recipe-hl">Schokoladen Brownie Cookies</h2>
         <figure class="top-img-container">
-            <img id="sun-dried-pasta" class="top-img" src="../assets/images/schokoladen-brownie-cookies.webp" alt="Schokoladen Kekse">
+            <img id="choc-brownie-cookie" class="top-img" src="../assets/images/schokoladen-brownie-cookies.webp" alt="Schokoladen Kekse">
         </figure>
         <section class="quick-info">
             <div class="servings"><span class="name-tag">Servings: </span><span>1 (15 Cookies)</span></div>
