Fixed ingredients sub headline

--- a/recipes/honeycomb_steamed_tofu_with_chili_oil.html
+++ b/recipes/honeycomb_steamed_tofu_with_chili_oil.html
@@ -26,7 +26,7 @@
         </section>
         <section class="ingredients">
             <h2 class="ingredients-hl">Ingredients</h2>
-            <h3 class="sub-hl">Main Ingredients</h3>
+            <h3 class="ingredients-subhl">Main Ingredients</h3>
             <ul class="ingredients-list">
                 <li>1 block extra-firm silken tofu or extra-firm, or firm tofu, 14 - 16 oz</li>
                 <li>1 small scallion, chopped</li>
@@ -38,7 +38,7 @@
                 <li>1 teaspoon rice vinegar</li>
                 <li>1 ½ teaspoon coconut amino</li>
             </ul>
-            <h3 class="sub-hl">For the oil infusion</h3>
+            <h3 class="ingredients-subhl">For the oil infusion</h3>
             <ul class="ingredients-list">
                 <li>¼ cup canola oil, or use peanut, sunflower seed, or avocado</li>
                 <li>¼ red onion or 1 shallot</li>
