--- a/recipes/honeycomb_steamed_tofu_with_chili_oil.html
+++ b/recipes/honeycomb_steamed_tofu_with_chili_oil.html
@@ -16,7 +16,7 @@
         </a>
     </header>
     <main>
-        <h2 class="recipe-hl">Honeycomb Steamed Tofu With Chili</h2>
+        <h2 class="recipe-hl">Honeycomb Steamed Tofu With Chili Oil</h2>
         <figure class="top-img-container">
             <img id="honeycomb-tofu" class="top-img" src="../assets/images/honeycomb_steamed_tofu_with_chili.JPG" alt="Served Tofu with chili">
         </figure>
