--- a/index.html
+++ b/index.html
@@ -107,6 +107,42 @@
             </div>
         </a>
 
+        <a class="no-decoration list-anchor" href="./recipes/korean_prawn_pancakes.html">
+            <div class="recipe-name">
+                <span class="name-tag">Name: </span>
+                <span>Korean Prawn Pancakes</span>
+            </div>
+            <div class="topic-name">
+                <span class="name-tag">Topic: </span>
+                <span>Dinner</span>
+            </div>
+            <div class="time">
+                <span class="name-tag">Time: </span>
+                <span>15 mins</span>
+            </div>
+            <div class="lang">
+                <img src="./assets/images/usa-icon.png" alt="USA icon" class="lang-icon">
+            </div>
+        </a>
+
+        <a class="no-decoration list-anchor" href="./recipes/kimchi_fried_rice.html">
+            <div class="recipe-name">
+                <span class="name-tag">Name: </span>
+                <span>Kimchi Fried Rice</span>
+            </div>
+            <div class="topic-name">
+                <span class="name-tag">Topic: </span>
+                <span>Dinner</span>
+            </div>
+            <div class="time">
+                <span class="name-tag">Time: </span>
+                <span>15 mins</span>
+            </div>
+            <div class="lang">
+                <img src="./assets/images/usa-icon.png" alt="USA icon" class="lang-icon">
+            </div>
+        </a>
+
         <a class="no-decoration list-anchor" href="./recipes/rice_paper_tteokbokki.html">
             <div class="recipe-name">
                 <span class="name-tag">Name: </span>
