--- a/index.html
+++ b/index.html
@@ -143,6 +143,24 @@
             </div>
         </a>
 
+        <a class="no-decoration list-anchor" href="./recipes/scallion_oil_noodles.html">
+            <div class="recipe-name">
+                <span class="name-tag">Name: </span>
+                <span>Scallion Oil Noodles (Cong You Ban Mian)</span>
+            </div>
+            <div class="topic-name">
+                <span class="name-tag">Topic: </span>
+                <span>Dinner</span>
+            </div>
+            <div class="time">
+                <span class="name-tag">Time: </span>
+                <span>15 mins</span>
+            </div>
+            <div class="lang">
+                <img src="./assets/images/usa-icon.png" alt="USA icon" class="lang-icon">
+            </div>
+        </a>
+
         <a class="no-decoration list-anchor" href="./recipes/rice_paper_tteokbokki.html">
             <div class="recipe-name">
                 <span class="name-tag">Name: </span>
