Styling of control elements

--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
     </header>
     <main>
 
-        <div class="filters">
-            <label for="topic-filter">Filter by Topic:</label>
-            <select name="topic-filter" id="topic-filter">
-                <option value="All">All</option>
-                <option value="Dinner">Dinner</option>
-                <option value="Snacks">Snacks</option>
-                <option value="Dips">Dips</option>
-            </select>
+        <div class="control-elements">
+            <div class="filters">
+                <label for="topic-filter">Filter by Topic:</label>
+                <select name="topic-filter" id="topic-filter">
+                    <option value="All">All</option>
+                    <option value="Dinner">Dinner</option>
+                    <option value="Snacks">Snacks</option>
+                    <option value="Dips">Dips</option>
+                </select>
+            </div>
         </div>
 
         <h2>All recipes:</h2>
