--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="og:title" content="PK Recipes">
     <meta name="og:description" content="Recipes cooked and approved by PK">
-    <meta name="og:image" content="./assets/images/sushi-chop.jpg">
+    <meta name="og:image" content="https://hardcoreseb.github.io/pk-recipes/assets/images/sushi-chop.jpg">
     <meta name="og:image:width" content="650">
     <meta name="og:image:height" content="536">
     <link rel="stylesheet" href="./assets/styles.css">
