--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="og:title" content="PK Recipes">
-    <meta name="og:description" content="Recipes cooked and approved by PK">
-    <meta name="og:image" content="https://hardcoreseb.github.io/pk-recipes/assets/images/sushi-chop.jpg">
-    <meta name="og:image:width" content="650">
-    <meta name="og:image:height" content="536">
+    <meta property="og:title" content="PK Recipes">
+    <meta property="og:description" content="Recipes cooked and approved by PK">
+    <meta property="og:image" content="https://hardcoreseb.github.io/pk-recipes/assets/images/sushi-chop.jpg">
+    <meta property="og:image:secure_url" content="https://hardcoreseb.github.io/pk-recipes/assets/images/sushi-chop.jpg">
+    <meta property="og:image:width" content="650">
+    <meta property="og:image:height" content="536">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:alt" content="Sushi held with two chopsticks">
     <link rel="stylesheet" href="./assets/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Permanent Marker">
     <link rel="shortcut icon" href="./assets/icons/sushicon.ico" type="image/x-icon">
