Last meta img test

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:image:height" content="536">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:alt" content="Sushi held with two chopsticks">
+    <meta name="twitter:image" content="https://hardcoreseb.github.io/pk-recipes/assets/images/sushi-chop.jpg">
     <link rel="stylesheet" href="./assets/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Permanent Marker">
     <link rel="shortcut icon" href="./assets/icons/sushicon.ico" type="image/x-icon">
