Working sorting system

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <select name="sort-filter" id="sort-filter">
                     <option value="default">Default</option>
                     <option value="time">Time</option>
-                    <option value="languague">Language</option>
+                    <option value="language">Language</option>
                 </select>
             </div>
 
@@ -77,7 +77,7 @@
             </div>
             <div class="time">
                 <span class="name-tag">Time: </span>
-                <span>1h 20 mins</span>
+                <span>1 h 20 mins</span>
             </div>
             <div class="lang">
                 <img src="./assets/images/usa-icon.png" alt="USA icon" class="lang-icon">
@@ -113,7 +113,7 @@
             </div>
             <div class="time">
                 <span class="name-tag">Time: </span>
-                <span>2h 15 mins</span>
+                <span>2 h 15 mins</span>
             </div>
             <div class="lang">
                 <img src="./assets/images/usa-icon.png" alt="USA icon" class="lang-icon">
