--- a/boilerplate_recipe.html
+++ b/boilerplate_recipe.html
@@ -18,7 +18,7 @@
     <main>
         <h2 class="recipe-hl">[RECIPE TITLE]</h2>
         <figure class="top-img-container">
-            <img id="" class="top-img" src="" alt="">
+            <img id="" class="top-img fit-img" src="" alt="">
         </figure>
         <section class="quick-info">
             <div class="servings"><span class="name-tag">Servings: </span><span>COUNTER</span></div>
