--- a/index.html
+++ b/index.html
@@ -210,6 +210,42 @@
             </div>
         </a>
 
+        <a class="no-decoration list-anchor" href="./recipes/geroesteter_rosenkohl_mit_sojasauce.html">
+            <div class="recipe-name">
+                <span class="name-tag">Name: </span>
+                <span>Gerösteter Rosenkohl mit Sojasauce</span>
+            </div>
+            <div class="topic-name">
+                <span class="name-tag">Topic: </span>
+                <span>Dinner</span>
+            </div>
+            <div class="time">
+                <span class="name-tag">Time: </span>
+                <span>45 mins</span>
+            </div>
+            <div class="lang">
+                <img src="./assets/images/de-icon.png" alt="DE icon" class="lang-icon">
+            </div>
+        </a>
+
+        <a class="no-decoration list-anchor" href="./recipes/pumpkin_pasta.html">
+            <div class="recipe-name">
+                <span class="name-tag">Name: </span>
+                <span>Kürbis Pasta</span>
+            </div>
+            <div class="topic-name">
+                <span class="name-tag">Topic: </span>
+                <span>Dinner</span>
+            </div>
+            <div class="time">
+                <span class="name-tag">Time: </span>
+                <span>25 mins</span>
+            </div>
+            <div class="lang">
+                <img src="./assets/images/de-icon.png" alt="DE icon" class="lang-icon">
+            </div>
+        </a>
+
         <a class="no-decoration list-anchor" href="./recipes/rice_paper_tteokbokki.html">
             <div class="recipe-name">
                 <span class="name-tag">Name: </span>
