--- a/index.html
+++ b/index.html
@@ -246,6 +246,24 @@
             </div>
         </a>
 
+        <a class="no-decoration list-anchor" href="./recipes/geroesteter_blumenkohl.html">
+            <div class="recipe-name">
+                <span class="name-tag">Name: </span>
+                <span>Gerösteter Blumenkohl</span>
+            </div>
+            <div class="topic-name">
+                <span class="name-tag">Topic: </span>
+                <span>Dinner</span>
+            </div>
+            <div class="time">
+                <span class="name-tag">Time: </span>
+                <span>60 mins</span>
+            </div>
+            <div class="lang">
+                <img src="./assets/images/de-icon.png" alt="DE icon" class="lang-icon">
+            </div>
+        </a>
+
         <a class="no-decoration list-anchor" href="./recipes/rice_paper_tteokbokki.html">
             <div class="recipe-name">
                 <span class="name-tag">Name: </span>
