--- a/recipes/geroesteter_rosenkohl_mit_sojasauce.html
+++ b/recipes/geroesteter_rosenkohl_mit_sojasauce.html
@@ -26,7 +26,7 @@
         </figure>
         <section class="quick-info">
             <div class="servings"><span class="name-tag">Servings: </span><span>6</span></div>
-            <div class="total-time"><span class="name-tag">Total Time: </span><span>45</span></div>
+            <div class="total-time"><span class="name-tag">Total Time: </span><span>45 mins</span></div>
         </section>
         <section class="ingredients">
             <h2 class="ingredients-hl">Ingredients</h2>
